--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       the text keep your left and right wrist far from each other. 
       Move you nose to move the text</span>
     <br>
-<span id = "text_sides"></span>
+<span id = "Font_size"></span>
   </h3>
 </center>
 
